<resources>
    <string name="app_name">SaeProjet</string>
    <string name="title_activity_login">Login</string>
    <string name="prompt_login">Login</string>
    <string name="prompt_password">Mot de passe</string>
    <string name="action_sign_in1">Suivant</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="token_key">token key</string>
    <string name="login_key">login key</string>
    <string name="login_id_key">login id key</string>
    <string name="login_id_path">login id path</string>
    <string name="offre_url">www.offre.net</string>
    <string name="country_prompt">Choose a country</string>
    <string name="titrelogin">Mon carnet de suivi de recherche de stage</string>
    <string name="candidatures_refusees">%1d candidature.s refusée.s</string>
    <string name="candidatures_en_cours">%1d candidature.s en cours</string>
    <string name="candidatures">%1d Candidature.s</string>
    <string name="details">Voir en détails</string>
    <string name="offres_retenues">%1d offre.s retenue.s</string>
    <string name="offres_consultees">%1d offre.s consultée.s</string>
    <string name="offres">%1d Offres disponibles</string>
    <string name="derniere_connexion">Dernière connexion le %1s</string>
    <string name="synthese">Synthèse</string>
    <string name="date_placeholder">date_placeholder</string>
    <string name="prenom">Bienvenue\n%1s</string>
    <string name="title_activity_main">Tableau de bord</string>
    <string name="title_activity_liste_offres">Offres</string>
    <string name="offres_disponibles">%1d Offres disponibles</string>
    <string name="bouton_retour">bouton retour</string>
    <string name="signInString">Vous posséder déja un compte ?</string>
    <string name="firstTimeText">Première fois ici ? </string>
    <string name="signUpString">Créez votre compte</string>
    <string name="signUpString2">Créez votre compte</string>
    <string name="stringConnect">Connectez vous !</string>
    <string name="stringSignIn">Connexion</string>
    <string name="hint_prenom">Prénom</string>
    <string name="hint_nom">Nom</string>
    <string name="hint_userName">Nom d\'utilisateur</string>
    <string name="hint_mdp">Mot de passe</string>
    <string name="hint_mdpConfirm">Confirmer votre mot de passe</string>
    <string name="create2_Cmon">Allez courage, vous y êtes presque !</string>
    <string name="hint_email">E-mail universitaire</string>
    <string name="hint_INE">Numéro INE</string>
    <string name="hint_parcours">Selectionnez votre parcours :</string>

    <string-array name="etats_candidatures">
        <item>Candidature à envoyer</item>
        <item>En attente de réponse</item>
        <item>En attente de RDV</item>
        <item>Entretien à réaliser</item>
        <item>Candidature refusée</item>
        <item>Candidature acceptée</item>
        <item>Choix définitif</item>
    </string-array>
    <string name="large_text">
        "Material is the metaphor.\n\n"

        "A material metaphor is the unifying theory of a rationalized space and a system of motion."
        "The material is grounded in tactile reality, inspired by the study of paper and ink, yet "
        "technologically advanced and open to imagination and magic.\n"
        "Surfaces and edges of the material provide visual cues that are grounded in reality. The "
        "use of familiar tactile attributes helps users quickly understand affordances. Yet the "
        "flexibility of the material creates new affordances that supercede those in the physical "
        "world, without breaking the rules of physics.\n"
        "The fundamentals of light, surface, and movement are key to conveying how objects move, "
        "interact, and exist in space and in relation to each other. Realistic lighting shows "
        "seams, divides space, and indicates moving parts.\n\n"

        "Bold, graphic, intentional.\n\n"

        "The foundational elements of print based design typography, grids, space, scale, color, "
        "and use of imagery guide visual treatments. These elements do far more than please the "
        "eye. They create hierarchy, meaning, and focus. Deliberate color choices, edge to edge "
        "imagery, large scale typography, and intentional white space create a bold and graphic "
        "interface that immerse the user in the experience.\n"
        "An emphasis on user actions makes core functionality immediately apparent and provides "
        "waypoints for the user.\n\n"

        "Motion provides meaning.\n\n"

        "Motion respects and reinforces the user as the prime mover. Primary user actions are "
        "inflection points that initiate motion, transforming the whole design.\n"
        "All action takes place in a single environment. Objects are presented to the user without "
        "breaking the continuity of experience even as they transform and reorganize.\n"
        "Motion is meaningful and appropriate, serving to focus attention and maintain continuity. "
        "Feedback is subtle yet clear. Transitions are efﬁcient yet coherent.\n\n"

        "3D world.\n\n"

        "The material environment is a 3D space, which means all objects have x, y, and z "
        "dimensions. The z-axis is perpendicularly aligned to the plane of the display, with the "
        "positive z-axis extending towards the viewer. Every sheet of material occupies a single "
        "position along the z-axis and has a standard 1dp thickness.\n"
        "On the web, the z-axis is used for layering and not for perspective. The 3D world is "
        "emulated by manipulating the y-axis.\n\n"

        "Light and shadow.\n\n"

        "Within the material environment, virtual lights illuminate the scene. Key lights create "
        "directional shadows, while ambient light creates soft shadows from all angles.\n"
        "Shadows in the material environment are cast by these two light sources. In Android "
        "development, shadows occur when light sources are blocked by sheets of material at "
        "various positions along the z-axis. On the web, shadows are depicted by manipulating the "
        "y-axis only. The following example shows the card with a height of 6dp.\n\n"

        "Resting elevation.\n\n"

        "All material objects, regardless of size, have a resting elevation, or default elevation "
        "that does not change. If an object changes elevation, it should return to its resting "
        "elevation as soon as possible.\n\n"

        "Component elevations.\n\n"

        "The resting elevation for a component type is consistent across apps (e.g., FAB elevation "
        "does not vary from 6dp in one app to 16dp in another app).\n"
        "Components may have different resting elevations across platforms, depending on the depth "
        "of the environment (e.g., TV has a greater depth than mobile or desktop).\n\n"

        "Responsive elevation and dynamic elevation offsets.\n\n"

        "Some component types have responsive elevation, meaning they change elevation in response "
        "to user input (e.g., normal, focused, and pressed) or system events. These elevation "
        "changes are consistently implemented using dynamic elevation offsets.\n"
        "Dynamic elevation offsets are the goal elevation that a component moves towards, relative "
        "to the component’s resting state. They ensure that elevation changes are consistent "
        "across actions and component types. For example, all components that lift on press have "
        "the same elevation change relative to their resting elevation.\n"
        "Once the input event is completed or cancelled, the component will return to its resting "
        "elevation.\n\n"

        "Avoiding elevation interference.\n\n"

        "Components with responsive elevations may encounter other components as they move between "
        "their resting elevations and dynamic elevation offsets. Because material cannot pass "
        "through other material, components avoid interfering with one another any number of ways, "
        "whether on a per component basis or using the entire app layout.\n"
        "On a component level, components can move or be removed before they cause interference. "
        "For example, a floating action button (FAB) can disappear or move off screen before a "
        "user picks up a card, or it can move if a snackbar appears.\n"
        "On the layout level, design your app layout to minimize opportunities for interference. "
        "For example, position the FAB to one side of stream of a cards so the FAB won’t interfere "
        "when a user tries to pick up one of cards.\n\n"
    </string>
    <string name="action_settings">Settings</string>
    <string name="bouton_offre">bouton_offre</string>
    <string name="suivant"><![CDATA[Suivant >]]></string>
    <string name="precedent"><![CDATA[< Précédent]]></string>
    <string name="chevron"><![CDATA[>]]></string>
    <string name="NumpageSurnbPage">%1d / %2d</string>
    <string name="liste_offres">Offres</string>
    <string name="save_update_offer">Sauvegarder</string>
    <string name="cancel_update_offer">Annuler</string>
    <string name="mettre_jour">Mettre à jour</string>
    <string name="abandonner_la_candidature">Abandonner la candidature</string>
    <string name="etat_de_la_candidature">État de la candidature</string>
    <string name="entreprise">Entreprise :</string>
    <string name="ville">Ville :</string>
    <string name="candidater">Candidater</string>
    <string name="etat">État :</string>
    <string name="titre_offre">Titre offre</string>
    <string name="candidaturestitre">Candidature.s</string>
    <string name="candidatures_acceptees_list">Candidatures acceptées</string>
    <string name="candidatures_refusees_list">Candidatures refusées</string>
    <string name="candidatures_en_cours_list">Candidatures en cours</string>

</resources>