<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:layout_margin="100px">


    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/titrelogin"
        android:layout_marginTop="20dp"
        android:textSize="30sp"
        android:textAlignment="center"
        />

    <EditText
        android:id="@+id/username"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="25dp"
        android:hint="@string/prompt_login"
        android:inputType="text"
        android:selectAllOnFocus="true"
         />

    <EditText
        android:id="@+id/password"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:hint="@string/prompt_password"
        android:imeActionLabel="@string/action_sign_in_short"
        android:imeOptions="actionDone"
        android:inputType="textPassword"
        android:selectAllOnFocus="true"
        android:layout_marginBottom="25dp"

        />

    <Button
        android:id="@+id/login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="64dp"
        android:text="@string/stringSignIn"
        />


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/firstTimeText"
        android:layout_gravity="center"
        android:textStyle="normal"
        android:textSize="18dp"
        android:textAlignment="center"
        android:layout_marginBottom="5dp"
        />

    <TextView
        android:id="@+id/createAccount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/signUpString"
        android:layout_gravity="center"
        android:textStyle="normal"
        android:textSize="18dp"
        android:textAlignment="center"
        android:textColor="@color/black"
/>
</LinearLayout>