<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ListOffresActivity"
    android:orientation="vertical">

    <LinearLayout
        android:id="@+id/layout_titre"
        android:layout_width="wrap_content"
        android:layout_marginTop="30dp"
        android:layout_marginBottom="20dp"
        android:layout_height="wrap_content">

        <ImageButton
            android:id="@+id/retourDeListeOffresAMain"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:src="@drawable/retour"
            android:scaleType="fitCenter"
            android:background="#00000000"
            android:contentDescription="@string/bouton_retour" />
        <TextView
            android:id="@+id/offres_disponibles"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/offres_disponibles"
            android:layout_marginTop="4dp"
            android:layout_marginStart="10dp"
            android:textSize="@dimen/textSize_title"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/offre1"
                android:layout_width="510dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="Offre 1"
                android:textColor="@color/black"
                android:textSize="@dimen/textSize_mid" />

            <TextView
                android:id="@+id/textView20"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/chevron"
                android:textAlignment="textEnd"
                android:textColor="@color/black"
                android:textSize="@dimen/textSize_mid" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/offre2"
                android:layout_width="510dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="Offre 2"
                android:textColor="@color/black"
                android:textSize="@dimen/textSize_mid" />

            <TextView
                android:id="@+id/textView25"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/chevron"
                android:textAlignment="textEnd"
                android:textColor="#000000"
                android:textSize="@dimen/textSize_mid" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/offre3"
                android:layout_width="510dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="Offre 3"
                android:textColor="@color/black"
                android:textSize="@dimen/textSize_mid" />

            <TextView
                android:id="@+id/textView27"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/chevron"
                android:textAlignment="textEnd"
                android:textColor="#000000"
                android:textSize="@dimen/textSize_mid" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/offre4"
                android:layout_width="510dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="Offre 4"
                android:textColor="@color/black"
                android:textSize="@dimen/textSize_mid" />

            <TextView
                android:id="@+id/textView29"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/chevron"
                android:textAlignment="textEnd"
                android:textColor="#000000"
                android:textSize="@dimen/textSize_mid" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/offre5"
                android:layout_width="510dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="Offre 5"
                android:textColor="@color/black"
                android:textSize="@dimen/textSize_mid" />

            <TextView
                android:id="@+id/textView31"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/chevron"
                android:textAlignment="textEnd"
                android:textColor="#000000"
                android:textSize="@dimen/textSize_mid" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:layout_gravity="center"
            android:orientation="horizontal">

            <Button
                android:id="@+id/buttonPrec"
                android:layout_width="140dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="20dp"
                android:text="@string/precedent" />

            <TextView
                android:id="@+id/indic_page"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="18sp"
                android:textColor="@color/black"
                android:text="@string/NumpageSurnbPage"
                android:layout_marginEnd="20dp"/>

            <Button
                android:id="@+id/buttonNext"
                android:layout_width="140dp"
                android:layout_height="wrap_content"
                android:text="@string/suivant" />

        </LinearLayout>

    </LinearLayout>
</LinearLayout>