<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="end"
    android:orientation="vertical"
    tools:context=".OffreActivity"
    android:background="@drawable/bg_list_offres">

  <LinearLayout
      android:id="@+id/layout_titre"
      android:layout_width="wrap_content"
      android:layout_marginTop="50dp"
      android:layout_marginBottom="20dp"
      android:paddingStart="5dp"
      android:layout_height="wrap_content"
      >

    <ImageButton
        android:id="@+id/retourDeOffresAListeOffre"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:src="@drawable/left_arrow"
        android:scaleType="fitCenter"
        android:background="#00000000"
        android:layout_gravity="center"
        android:contentDescription="@string/bouton_retour" />

    <TextView
        android:id="@+id/liste_offres"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/liste_offres"
        android:layout_marginTop="4dp"
        android:layout_marginStart="5dp"
        android:textSize="@dimen/textSize_title"
        android:textStyle="bold"
        android:textColor="@color/white"/>
  </LinearLayout>

  <LinearLayout
      android:layout_width="match_parent"
      android:layout_marginStart="10dp"
      android:layout_marginTop="70dp"
      android:layout_marginEnd="10dp"
      android:layout_height="wrap_content"
      android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:background="@drawable/bg_item"
        >

      <TextView
          android:id="@+id/titreOffre"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:layout_weight="1"
          android:paddingStart="5dp"
          android:paddingEnd="5dp"
          android:text="Titre offre"
          android:textColor="@color/black"
          android:textSize="@dimen/textSize_mid" />

      <ImageButton
          android:id="@+id/developArrow"
          android:layout_width="40dp"
          android:layout_height="40dp"
          android:scaleType="fitCenter"
          android:background="#00000000"
          android:layout_gravity="top"
          android:contentDescription="@string/bouton_retour" />


    </LinearLayout>

        <TextView
            android:id="@+id/statutOffre"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:text="Statut : "
            android:textColor="@color/black"
            android:textSize="@dimen/textSize_normal"
            android:gravity="center_vertical"
            android:layout_marginTop="10dp"

            />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:orientation="horizontal"
        android:layout_marginTop="10dp">

      <TextView
          android:id="@+id/textView16"
          android:layout_width="125dp"
          android:layout_height="match_parent"
          android:text="Entreprise : "
          android:textAppearance="@style/TextAppearance.AppCompat.Large"
          android:textColor="@color/black"
          android:textSize="@dimen/textSize_mid"/>

      <TextView
          android:id="@+id/nomEntreprise"
          android:layout_width="match_parent"
          android:layout_height="match_parent"
          android:text="Non renseigné"
          android:textColor="@color/black"
          android:textSize="@dimen/textSize_mid"
          />

    </LinearLayout>

    <LinearLayout
      android:layout_width="match_parent"
      android:layout_height="42dp"
      android:orientation="horizontal"
      android:layout_marginTop="10dp">

      <TextView
          android:id="@+id/textView18"
          android:layout_width="60dp"
          android:layout_height="match_parent"
          android:text="Ville : "
          android:textAppearance="@style/TextAppearance.AppCompat.Large"
          android:textColor="@color/black"
          android:textSize="@dimen/textSize_mid"
          />

      <TextView
          android:id="@+id/nomVille"
          android:layout_width="match_parent"
          android:layout_height="match_parent"
          android:text="Non renseigné"
          android:textColor="@color/black"
          android:textSize="@dimen/textSize_mid"/>

    </LinearLayout>

    <LinearLayout
      android:layout_width="match_parent"
      android:layout_height="42dp"
      android:orientation="horizontal"
      android:layout_marginTop="10dp">

      <TextView
          android:id="@+id/textView19"
          android:layout_width="60dp"
          android:layout_height="match_parent"
          android:text="URL : "
          android:textAppearance="@style/TextAppearance.AppCompat.Large"
          android:textColor="@color/black"
          android:textSize="@dimen/textSize_mid"/>

      <TextView
          android:id="@+id/offreUrl"
          android:layout_width="match_parent"
          android:layout_height="match_parent"
          android:autoLink="web"
          android:text="@string/offre_url"
          android:textColor="?attr/colorPrimary"
          android:textSize="@dimen/textSize_mid"/>

    </LinearLayout>


      <Button
          android:id="@+id/buttonCandidature"
          android:layout_width="150dp"
          android:layout_height="wrap_content"
          android:text="Candidater"
          android:layout_gravity="center"
          android:layout_marginTop="80dp"/>

  </LinearLayout>

</LinearLayout>